--- a/appspec.yml
+++ b/appspec.yml
@@ -16,7 +16,7 @@ hooks:
     - location: scripts/stop_server.sh
       timeout: 30
       runas: root
-  ApplicationStart:
-    - location: scripts/start_server.sh
+  #ApplicationStart:
+    # location: scripts/start_server.sh
       timeout: 40
       runas: root
