--- a/appspec.yml
+++ b/appspec.yml
@@ -8,15 +8,15 @@ hooks:
     - location: scripts/display.sh
       timeout: 30
       runas: root
-  AfterInstall:
-    - location: scripts/change_permissions.sh
+  #AfterInstall:
+    # location: scripts/change_permissions.sh
       timeout: 30
       runas: root
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 30
       runas: root
-  #ApplicationStart:
-    # location: scripts/start_server.sh
+  ApplicationStart:
+    - location: scripts/start_server.sh
       timeout: 40
       runas: root
