--- a/appspec.yml
+++ b/appspec.yml
@@ -10,8 +10,8 @@ hooks:
       runas: root
   #AfterInstall:
     # location: scripts/change_permissions.sh
-      timeout: 30
-      runas: root
+      #timeout: 30
+      #runas: root
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 30
